--- a/BTLLTW_webBanQuanAo/BTLLTW_webBanQuanAo.csproj
+++ b/BTLLTW_webBanQuanAo/BTLLTW_webBanQuanAo.csproj
@@ -118,6 +118,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="ctsp.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -182,6 +183,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="style\base.css" />
+    <Content Include="style\styleDetail.css" />
     <Content Include="style\styleindex.css" />
     <Content Include="style\styleLogin.css" />
     <Content Include="style\styleList.css" />
@@ -199,6 +201,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="ctsp.aspx.cs">
+      <DependentUpon>ctsp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ctsp.aspx.designer.cs">
+      <DependentUpon>ctsp.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Item.cs" />
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
