--- a/BTLLTW_webBanQuanAo/BTLLTW_webBanQuanAo.csproj
+++ b/BTLLTW_webBanQuanAo/BTLLTW_webBanQuanAo.csproj
@@ -187,6 +187,7 @@
     <Content Include="style\styleindex.css" />
     <Content Include="style\styleLogin.css" />
     <Content Include="style\styleList.css" />
+    <Content Include="them.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -241,6 +242,13 @@
       <DependentUpon>dssp.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="them.aspx.cs">
+      <DependentUpon>them.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="them.aspx.designer.cs">
+      <DependentUpon>them.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
